# python-template

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  page.md
src/: app.py
tests/src/: test_main.py
