[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[dependency-groups]
dev = [
    "boto3==1.37.15",
    "boto3-stubs==1.37.15",
    "google-auth==2.38.0",
    "google-cloud-compute==1.29.0",
    "google-cloud-container==2.56.1",
    "kubernetes==32.0.1",
    "mike==2.1.3",
    "mkdocs-material==9.5.32",
    "mypy==1.11.0",
    "mypy-boto3-eks==1.37.4",
    "mypy-boto3-iam==1.37.0",
    "pre-commit==3.7.1",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.11.2",
    "types-boto3==1.37.16",
]


[project]
authors = []
dependencies = []
description = ""
name = "src"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"


[project.scripts]
app = "app:main"


[tool.coverage.report]
show_missing = true


[tool.coverage.run]
omit = ["*/tests/*", "*__init__.py*"]


[tool.mypy]
strict = true


[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

fix = true
indent-width = 4
line-length = 100
target-version = "py312"


[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false


[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "ANN401", # any-type
    "COM812", # missing-trailling-comma
    "D100",   # undocumented-public-module
    "D101",   # undocumented-public-class
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D104",   # undocumented-public-package
    "D105",   # undocumented-magic-method
    "D107",   # undocumented-public-init
    "D211",   # blank-line-before-class
    "D213",   # multiline-summary-second-line
    "ISC001", # single-line-implicit-string-concatenation
]
select = ["ALL"]
unfixable = []


[tool.ruff.lint.per-file-ignores]
"scripts/*" = [
    "T201", # print
]

"tests/*" = [
    "FBT001", # boolean-type-hint-positional-argument
    "S101",   # assert
]
